# db-ai-pro

./: .gitignore  LICENSE  QUICK_FIX_QM.md  README.md  README_BUILD.md  README_en.md  build_exe.bat  build_exe.sh  build_exe_with_config.bat  build_exe_with_config.sh  build_mac.sh  build_mac_enhanced.sh  env.example  pyproject.toml  requirements.txt
docs/: AI_MODEL_CURRENT_USAGE.md  AI_MODEL_PERSISTENCE_FIX.md  AI_MODEL_PERSISTENCE_REFACTOR.md  AI_MODEL_SQLITE_MIGRATION.md  AI_MODEL_USAGE.md  AI_QUERY_CURRENT_TABLE_PRIORITY.md  AI_TABLE_SELECTOR_ERROR_FIX.md  API_KEY_DISPLAY_UPDATE.md  BUGFIX_DELETE_TABLE_CACHE.md  BUILD_WITH_DEFAULT_AI_CONFIG.md  CHANGELOG_v1.1.0.md  CHANGELOG_v1.2.0.md  DELETE_TABLE_FEATURE.md  DELETE_TABLE_USAGE.md  EDIT_TABLE_COPY_FEATURE.md  EDIT_TABLE_COPY_USAGE.md  I18N_GUIDE.md  ICON_IMPROVEMENTS.md  INDEX_SYNC_FEATURE.md  INSTALL_LRELEASE.md  NEW_I18N_SYSTEM.md  RELEASE_NOTES_v1.1.0.md  SESSION_SUMMARY_2024-12-15.md  TABLE_CATEGORY_MENU.md  TREE_EXPANSION_OPTIMIZATION.md  UPDATES_v1.1.0_简体中文.md  工具栏图标添加完成.md
resources/: .gitkeep
resources/icons/: .gitkeep  create_app_icon.py  create_ico.py
resources/images/: .gitkeep
resources/styles/: .gitkeep
resources/translations/: FILE_FIXED.md  HOW_TO_GENERATE_QM.md  README.md  dataai_en_US.json  dataai_en_US.ts
scripts/: generate_embedded_config.py  run_build.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  ai_client.py  ai_model_config.py  ai_model_storage.py  ai_token_stats.py  config_db.py  i18n.py  (+12 more)
tests/: test_main.py  test_openapi_client.py
(+69 files in other folders)
